# qemu-calypso

./: .AUDIT_DECODER_20260508.md.swp  .CLAUDE.md.swp  .DIAG_FOR_CLAUDE_WEB.md.swp  .bridge.py.swp  .calypso.md.swp  .calypso_dsp.txt.swp  .code.txt.swp  .custom.scss.swp  .diff_pending_uncommitted.patch.swp  .diff_session_full.patch.swp  .dsp_read.sh.swp  .dump.txt.swp  .gitattributes  .gitignore  .hack.patch.swp  .make_diag_bundle.sh.swp  .package-lock.json.swp  .package.json.swp  .parse_dsp_log.sh.swp  .qemu-calypso.txt.swp  .qemu.log.swp  BUGS_AND_FIXES.md  BUILD.md  CLAUDE.md  DIAG_FOR_CLAUDE_WEB.md  LICENSE  MTTCG_AUDIT.md  PLAN_TIMINGS_FIX.md  PROJECT_STATUS.md  README.md  REFACTORING.md  REPORT_CLAUDE_WEB_20260508_NIGHT.md  REPORT_CLAUDE_WEB_20260508_NIGHT_RXDONEFLAG.md  REPORT_CLAUDE_WEB_20260514.md  REPORT_CLAUDE_WEB_20260514_PYTEST.md  REPORT_CLAUDE_WEB_20260515.md  REPORT_CLAUDE_WEB_20260515_BCBCD_REVERT.md  REPORT_CLAUDE_WEB_20260515_BITF_AUDIT.md  REPORT_CLAUDE_WEB_20260515_ICOUNT.md  REPORT_CLAUDE_WEB_20260515_TIMING.md  (+96 more)
hw/arm/calypso/: CLAUDE.md  Kconfig  calypso_arm2dsp.c  calypso_arm2dsp.h  calypso_bsp.c  calypso_c54x.c  calypso_c54x.c.bak  calypso_c54x.h  calypso_dbg.c  calypso_debug.c  calypso_dsp_shunt.c  calypso_dsp_shunt.h  calypso_fbsb.c  calypso_fbsb.h  calypso_full_pcb.c  calypso_full_pcb.h  calypso_iota.c  calypso_layer1.c  calypso_layer1.h  calypso_mb.c  calypso_orch.h  calypso_sim.c  calypso_soc.c  calypso_socket_improved.c  calypso_tdma_hw.c  calypso_tdma_hw.h  calypso_tint0.c  calypso_tint0.h  calypso_tpu.c  calypso_trx.c  calypso_tsp.c  calypso_twl3025.c  fw_console.c  l1ctl_sock.c  meson.build  sercomm_gate.c
hw/arm/calypso/calypso/: calypso_c54x.c  calypso_c54x.h  calypso_mb.c  calypso_soc.c  calypso_trx.c  calypso_trx.c.bak  l1ctl_sock.c  meson.build
hw/arm/calypso/doc/: BSP_DMA.md  CALYPSO_HW.md  DSP_ROM_MAP.md  MMAP_SI_FORMAT.md  PROJECT_STATUS.md  STATUS.md  TODO.md  (+10 more)
(+220 files in other folders)
