# hw/arm/calypso/meson.build
arm_ss.add(when: 'CONFIG_CALYPSO', if_true: files(
  'calypso_mb.c',
  'calypso_soc.c',
  'calypso_trx.c',
  'calypso_c54x.c',
  'calypso_fbsb.c',
  'calypso_bsp.c',
  'calypso_dbg.c',
  'calypso_iota.c',
  'l1ctl_sock.c',
  'sercomm_gate.c',
  'calypso_tint0.c',
  'fw_console.c',
  'calypso_sim.c',
))
